Pregatiri pentru noi functionalitati
- vectori separati pentru fiecare tip de general;
- redenumirea Texts.h in Constants.h;
- prevenirea startului fara numarul minim de generali inamici;
- adaugarea a inca 67 de generali pentru minimul recomandat;
- mici modificari la texte si afisari.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ FetchContent_MakeAvailable(json)
 add_executable(${MAIN_EXECUTABLE_NAME}
     main.cpp
         header/General.h
-        header/Texts.h
+        header/Constants.h
         header/Army.h
         header/Garrison.h
         header/Scout.h
