Mutarea codului functional din main.cpp, FTXUI!
- Pentru ca deja functioneaza aproximativ asa cum imi doresc, am mutat codul de start din main intr-o noua clasa, Game (*), declarata in Game.h si definita in Game.cpp;
- Modificarea functiilor ce erau in main.cpp pentru a functiona cu membri ai unei clase;
- Implementare FTXUI !!!;
- Am inteles cum functioneaza logica FTXUI, e super intuitiv si usor de utilizat odata ce am trecut prin cateva tutoriale si exemple (chiar daca au linkurile cazute, le-am gasit singur pe github);
- StartingGenerals sunt acum afistati mult mai frumos**;
- Am aflat ca trebuie sa dau reset cache din cmake pentru a vedea 100% daca merge ce am modificat.

* - Asta imi permite sa fac o tranzitie cu mai multa usurinta spre FTXUI, pentru ca pot accesa toate informatiile necesare despre joc prin clasa Game, apoi sa le afisez mult mai frumos;

** - Urmeaza sa modific toate afisarile pentru a fi mult mai usor de inteles, dar astazi am un laborator crucial si ma opresc aici. Va fi un proces destul de lung...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,13 @@ FetchContent_Declare(
          URL https://github.com/nlohmann/json/releases/download/v3.12.0/json.tar.xz
 )
 
+FetchContent_Declare(
+        ftxui
+        GIT_REPOSITORY https://github.com/ArthurSonzogni/ftxui
+        GIT_TAG v6.1.9
+)
+
+FetchContent_MakeAvailable(ftxui)
 FetchContent_MakeAvailable(json)
 
 
@@ -57,6 +64,8 @@ add_executable(${MAIN_EXECUTABLE_NAME}
         header/ControlPoint.h
         header/Settlement.h
         header/Formulas.h
+        header/Game.h
+        source/Game.cpp
 )
 
 # NOTE: Add all defined targets (e.g. executables, libraries, etc. )
@@ -72,7 +81,12 @@ set_compiler_flags(RUN_SANITIZERS TRUE TARGET_NAMES ${MAIN_EXECUTABLE_NAME})
 # target_include_directories(${MAIN_EXECUTABLE_NAME} SYSTEM PRIVATE ext/<SomeHppLib>/include)
 # target_include_directories(${MAIN_EXECUTABLE_NAME} SYSTEM PRIVATE ${json_SOURCE_DIR}/include)
 # target_link_directories(${MAIN_EXECUTABLE_NAME} PRIVATE ${json_BINARY_DIR}/lib)
-target_link_libraries(${MAIN_EXECUTABLE_NAME} nlohmann_json::nlohmann_json)
+target_link_libraries(${MAIN_EXECUTABLE_NAME}
+        nlohmann_json::nlohmann_json
+        ftxui::component
+        ftxui::dom
+        ftxui::screen
+)
 
 ###############################################################################
 
