Outputul primului tutorial aproape gata
- Am redenumit Formulas.h in Functions.h;
- Am adaugat functii disponibile in orice clasa care au legatura cu inputul jucatorului si outputul facut frumos cu FTXUI;
- Functie de afisare publica noua pentru Army;
- Definirea unor culori uzuale pentru a-mi fi mai usor sa le modific dupa.

+ Mai am de facut outputul pentru confruntari (vreau ceva side by side cumva, oi vedea).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ add_executable(${MAIN_EXECUTABLE_NAME}
         header/Scout.h
         header/ControlPoint.h
         header/Settlement.h
-        header/Formulas.h
+        header/Functions.h
         header/Game.h
         source/Game.cpp
 )
