--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,8 @@ add_executable(${MAIN_EXECUTABLE_NAME}
         header/Unit.h
         source/Captain.cpp
         header/Captain.h
+        source/Enemy.cpp
+        header/Enemy.h
 )
 
 # NOTE: Add all defined targets (e.g. executables, libraries, etc. )
@@ -108,6 +110,6 @@ if(APPLE)
     install(FILES launcher.command DESTINATION ${DESTINATION_DIR})
 endif()
 
-copy_files(FILES tastatura.txt generals.json settlements.json captains.json controlPoints.json COPY_TO_DESTINATION TARGET_NAME ${MAIN_EXECUTABLE_NAME})
+copy_files(FILES tastatura.txt generals.json settlements.json captains.json controlPoints.json enemies.json COPY_TO_DESTINATION TARGET_NAME ${MAIN_EXECUTABLE_NAME})
 # copy_files(FILES tastatura.txt config.json DIRECTORY images sounds COPY_TO_DESTINATION TARGET_NAME ${MAIN_EXECUTABLE_NAME})
 # copy_files(DIRECTORY images sounds COPY_TO_DESTINATION TARGET_NAME ${MAIN_EXECUTABLE_NAME})
